# PalmPilot

./: .gitignore  CMakeLists.txt  README.md
docs/: setup_steps.MD
src/: backgroundSubtraction.h  calibration.cpp  calibration.h  cam.cpp  cam.h  detectionData.h  fastTracker.cpp  git_test.cpp  handTracker.cpp  handTracker.h  handTracking.cpp  handTracking.h  kCurvature.h  main.cpp  metalTest.cpp  openpose.cpp  openposeSample.cpp  openposeTracker.cpp  openposeTracker.h  removeFace.cpp  removeFace.h
src/math/: convexityDefects.h  maxInscribingCircle.cpp
src/mouseControl/: controlState.cpp  controlState.h  event.cpp  event.h  keyboardView.cpp  keyboardView.h  mouseControl.cpp
src/qtComponents/: virtualKeyboard.cpp  virtualKeyboard.h
src/tracking/: backgroundSubtraction.cpp  backgroundSubtraction.h  calibration.cpp  calibration.h  cam.h  constants.h  detectionData.h  fastTracker.cpp  fastTracker.h  handTracker.h  handTracking.cpp  handTracking.h  mouseControl.cpp  runCalibration.cpp  runFastTracking.cpp
src/tracking/math/: convexityDefects.cpp  convexityDefects.h  kCurvature.cpp  kCurvature.h  maxInscribingCircle.cpp  maxInscribingCircle.h
